--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.suchipi</groupId>
-    <artifactId>my-first-bukkit-plugin</artifactId>
+    <artifactId>dirt</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <repositories>
